# htap-anon

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  load_script.sh  point_query.sh  queries.sh  run_script.sh
ddl/flat/: row.fbs
ddl/proto/: data.proto
experiment/: analyze_sys_usage.py  analyze_sys_usage.sh  calibrate_transform_rate.sh  load_script.sh  run_bands.sh  run_db_bench.sh  run_db_bench_stressed.sh  run_dbbench_load.sh  run_dbbench_read.sh  run_dbbench_sweep.sh  run_dbbench_sweep_value.sh  run_ycsb.sh  slack_characterize.sh  sweep.sh  sweep_value_sizes.sh  sweep_ycsb_workloads.sh  test_load.sh  testplan.txt  xput.sh
experiment/model/: sim_system_model.sh
experiment/plot/: add_disk_bw_util.py  add_ram_pct_std.py  plot_bottleneck.py  plot_stitched.py
experiment/saturation/: README.md  identify_bottleneck.sh  saturation_sweep.sh
experiment/slack/: augment_transform_bench.cc  convert_transform_bench.cc  cpu_slack_sweep.sh  cpu_slack_sweep_v1.sh  cpu_slack_sweep_v2.sh  disk_io_slack_sweep.sh  iBench_cpu.cc  iBench_io.cc  io_slack_sweep.sh  io_slack_sweep_v2.sh  lib_transform_profile.sh  run_augment_transform_profile.sh  run_convert_transform_profile.sh  run_split_transform_profile.sh  run_transform_profile.sh  sim_bottleneck_sweep.sh  split_bench.cc  split_transform_bench.cc
proto/: CMakeLists.txt  columns.pb.cc  columns.pb.h  columns.proto  data.proto
proto/bak/: columns.pb.cc
src/cabindb/: CMakeLists.txt  Dstore.cc  cabin_db.cc  cabin_db.h  column_families.cc  column_families.h  column_family_util.h  compactor.cc  compactor.h
src/cabindb/rocksdb-rados-env/: README.md  env_librados.cc
src/example/: CMakeLists.txt  example.cc  myarrow.cc
src/libmycelium/: CMakeLists.txt
src/libmycelium/include/mycelium/: admission_policy.h  augmenter.h  compaction_hook.h  compaction_slack_estimator.h  converter.h  csv_encoder.h  csv_parser.h  distributor.h  fixedbin64_encoder.h  fixedbin64_parser.h  flatbuffers_encoder.h  flatbuffers_parser.h  grove_topology.h  json_encoder.h  json_parser.h  mynooper.h  protobuf_encoder.h  protobuf_parser.h  status.h  transform_epoch_tracker.h  transform_scheduler.h  transformer.h
src/libmycelium/src/: compaction_slack_estimator.cc  transform_epoch_tracker.cc  transform_scheduler.cc
src/libmycelium/src/transformer/: transformer_factory.cc
src/libmycelium/src/transformer/augment/: augmenter.cc  augmenter.h
src/libmycelium/src/transformer/common/encoder/: csv_encoder.cc  csv_encoder.h  fixedbin64_encoder.cc  fixedbin64_encoder.h  flatbuffers_encoder.cc  flatbuffers_encoder.h  json_encoder.cc  json_encoder.h  protobuf_encoder.cc  protobuf_encoder.h
src/libmycelium/src/transformer/common/parser/: csv_parser.cc  csv_parser.h  fixedbin64_parser.cc  fixedbin64_parser.h  flatbuffers_parser.cc  flatbuffers_parser.h  json_parser.cc  json_parser.h  protobuf_parser.cc  protobuf_parser.h
src/libmycelium/src/transformer/convert/: converter.cc  converter.h
src/libmycelium/src/transformer/distribute/: distributor.cc  distributor.h
src/libmycelium/src/transformer/identity/: mynooper.cc  mynooper.h
src/libmycelium/tests/: CMakeLists.txt  test_compaction_slack_estimator.cc  test_ewma_admission_policy.cc  test_scheduler_scenarios.cc  test_transform_epoch_tracker.cc  test_transform_scheduler.cc
src/proto/: CMakeLists.txt  columns.pb.cc  columns.pb.h  columns.proto
src/test/elt/: rw_wal.cc
src/test/mycelium/: CMakeLists.txt  test_bottommost_compaction.cc  test_delete_consistency.cc  test_level_eligibility.cc
src/test/transformers/scripts/: build_prefix_index.cc  proto2flat_from_hex.cc  run_convert.sh  run_indexing.sh  run_split.sh  split_column_groups.cc  split_from_hex.cc
src/test/transformers/src/: split_column_groups.cc
src/test/ycsb/: CMakeLists.txt  Dockerfile.bench  run_mycelium.sh  run_mycelium_docker.sh  run_script.sh  ycsbc.cc
src/test/ycsb/core/: client.h  core_workload.cc  core_workload.h  db.h  skewed_earliest_generator.h  skewed_leastrecent_generator.h  utils.h
src/test/ycsb/db/: cabindb_db.cc  cabindb_db.h  compaction_metrics_listener.cc  compaction_metrics_listener.h  db_factory.cc  db_helper.cc  db_helper.h  mycelium.cc  mycelium.h  mycelium_column_strawman.cc  mycelium_column_strawman.h  mycelium_row_strawman.cc  mycelium_row_strawman.h  rocksdb_column_strawman.cc  rocksdb_column_strawman.h  splitfirst.cc  splitfirst.h  test_cabin_db.cc  test_cabin_db.h  test_converting.cc  test_converting.h  test_cracking.cc  test_cracking.h  test_crackplus.cc  test_crackplus.h  test_fb_cracker.cc  test_fb_cracker.h  test_flatbuffers.cc  test_flatbuffers.h  test_indexing.cc  test_indexing.h  test_mynoop.cc  test_mynoop.h  test_noop.cc  test_noop.h  test_preconverting.cc  test_preconverting.h  test_precracking.cc  test_precracking.h  test_preindexing.cc  (+7 more)
src/test/ycsb/jobs/: split.cpp
src/test/ycsb/workloads/: test_workloada.spec  test_workloada_convert.spec  test_workloada_json.spec  test_workloada_split.spec  test_workloadb.spec  test_workloadb1.spec  test_workloadb2.spec  test_workloadb3.spec  test_workloadb4.spec  test_workloadc.spec  test_workloadc1.spec  test_workloadc2.spec  test_workloadc3.spec  test_workloadc4.spec  test_workloadd.spec  test_workloadd1.spec  test_workloadd2.spec  test_workloadd3.spec  test_workloadd4.spec  test_workloade.spec  test_workloade1.spec  test_workloade2.spec  test_workloade3.spec  test_workloade4.spec  test_workloadf.spec  test_workloadg.spec  test_workloadh.spec  test_workloadi.spec
transformer/: CMakeLists.txt
utility/: add_disk_bw_util.py  calibrate_transform_rate.sh  cpu_slack_sweep.sh  cpu_slack_sweep_v2.sh  iBench_cpu.cc  parse_compaction_log.sh  plot_bottleneck.py  plot_stitched.py  run_bands.sh  run_db_bench.sh  run_db_bench_stressed.sh  run_dbbench_load.sh  run_dbbench_read.sh  run_dbbench_sweep.sh  run_dbbench_sweep_value.sh  run_script.sh  run_ycsb.sh  saturation_sweep.sh  slack_characterize.sh  sweep.sh  test_identity.sh  test_load.sh
utility/sands/: saturation_sweep.sh
